Name:                astro-tables
Version:             0.3
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2008-2013
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           Unstable
Synopsis:            Slow-compiling tables for IAU2000.
Description:
    Contains large slow-compiling tables originally in astro. These tables
    were broken out to allow more rapid modification and recompilation of
    astro.
Category:            Physics
Build-Type:          Simple
Build-Depends:       base
                   , dimensional
Exposed-Modules:     IAU2000.Table53
                     IAU2000.Table53.Multipliers
                     IAU2000.Table53.LunisolarMultipliers
                     IAU2000.Table53.PlanetaryMultipliers
                     IAU2000.Table53.PhiCoeffs
                     IAU2000.Table53.EpsCoeffs
Extra-source-files:  README,
                     IAU2000/Parser.hs
                     IAU2000/tab5.2a.txt
                     IAU2000/tab5.2b.txt
                     IAU2000/tab5.2c.txt
                     IAU2000/tab5.3a.txt
                     IAU2000/tab5.3b.txt
                     IAU2000/tab5.4.txt
